# BlurBubble

./: .gitignore  AGENTS.md  BIG_TECH_PROP_LETTERS.md  COMPLIANCE.md  FREQUENTLY_ASKED_QUESTIONS.md  GEMINI.md  HARDWARE_ROADMAP.md  INVESTOR_PITCH_DECK.md  LEARNING_PROJECT.md  LICENSE.md  MASTER_PROMPT_LOG.md  NON_DISCLOSURE_AGREEMENT.md  OWNERSHIP_VESTING_DECLARATION.md  PATENT_SPECIFICATION.md  README.md  TECHNICAL_WHITE_PAPER.md  USE_CASES.md  metadata.json  package-lock.json  package.json  server.ts
production_assets/firmware/: CMakeLists.txt  nrf52840_beacon.cpp
production_assets/mobile/: BlurBubbleBleBridge.m  BlurBubbleBleBridge.swift  BlurBubbleBleModule.kt
production_assets/standards/: coalition_proposal.md  draft-stuart-blurbubble-opt-out-03.txt
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AiAcousticClassifier.tsx  AiComplianceGenerator.tsx  AiTacticalCopilot.tsx  AiThreatOptimizer.tsx  AiVisionCensorship.tsx  AudioLab.tsx  AutomatedShieldEngine.tsx  ComplianceAudit.tsx  D3SignalMap.tsx  GlassesHUD.tsx  GpuShaderCore.tsx  NDAGatekeeper.tsx  OSHomeLauncher.tsx  PrivacyBeacon.tsx  PrivacyThreatMap.tsx  RadarSweepOverlay.tsx  TechSpecs.tsx
src/hardware_reference/: AndroidComplianceFilter.kt  README.md  android_camera_hal3_hook.cpp  apple_coremedia_hook.swift  ble_beacon.c  ble_beacon_arduino.ino  ble_beacon_micropython.py  compliance_crawler.py  crypto_engine.rs  face_blur_filter.cpp  fcc_ce_certifications.md  liquid_crystal_shutter.ino  pcb_design_and_bom.md  ultrasonic_speech_jammer.c
src/lib/: blur.worker.ts  haptics.ts  i18n.tsx  privacyCrypto.ts  vocalScramblerAudio.ts  wasmBlur.ts
